<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/appbar_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/show_password_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/modifiedEditText"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNewPassword"
        style="@style/parent"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/show_password_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNewPassword"
            style="@style/modifiedEditText"
            android:backgroundTint="@color/colorAccent"
            android:hint="@string/change_new_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPasswordConfirm"
        style="@style/parent"
        android:layout_margin="10dp"
        app:passwordToggleEnabled="true"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/show_password_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputNewPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPasswordConfirm"
            style="@style/modifiedEditText"
            android:hint="@string/login_confirm_password_hint"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
        android:id="@+id/buttonChangePass"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/change_pass"
        style="@style/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputPasswordConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>