<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:padding="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/viewParent.headerText.NoMode"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/forgot_password" />

            <TextView
                style="@style/viewParent"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_marginRight="70dp"
                android:layout_alignParentEnd="true"
                android:text="@string/otp_send" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/plane"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/whiteTextColor"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputEmail"
                    style="@style/parent"
                    android:layout_marginTop="@dimen/loginViewsMargin">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPhone"
                        style="@style/modifiedEditText"
                        android:hint="Số điện thoại"
                        android:inputType="phone"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/btnSubmit"
                    style="@style/loginButton"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:onClick="onOTPVerification"
                    android:text="@string/confirm"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="false"
        android:onClick="onLogin"
        android:src="@drawable/ic_back_1_img"
        tools:ignore="ContentDescription" />
</RelativeLayout>